--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,12 @@ charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
 confection==0.1.5
+contourpy==1.3.1
+cycler==0.12.1
 cymem==2.0.11
 decorator==5.2.1
 executing==2.2.0
+fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
@@ -24,11 +27,13 @@ Jinja2==3.1.6
 jsonpickle==4.0.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 murmurhash==1.0.12
@@ -51,6 +56,7 @@ pydantic==2.11.3
 pydantic_core==2.33.1
 pydeck==0.9.1
 Pygments==2.19.1
+pyparsing==3.2.3
 pyspark==3.5.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -59,6 +65,7 @@ referencing==0.36.2
 requests==2.32.3
 rich==14.0.0
 rpds-py==0.24.0
+seaborn==0.13.2
 setuptools==78.1.0
 shellingham==1.5.4
 six==1.17.0
